fix mobile header overflow issue

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -15,7 +15,8 @@ html body .app-header .container {
 }
 
 html body .app-header .container h1 {
-  width: 400px;
+  display: block;
+  width: 100%;
   text-align: center;
   font-weight: 800;
 }
@@ -27,8 +28,9 @@ html body .app-header .container .hr {
 }
 
 html body .app-header .container p {
-  width: 300px;
+  max-width: 300px;
   text-align: left;
+  margin: 0 auto;
   margin-top: 12px;
   font-weight: bold;
 }
